--- a/src/styles/components/_story.scss
+++ b/src/styles/components/_story.scss
@@ -17,8 +17,9 @@
     padding: 2em;
     background-color: #fff;
     box-shadow: 3px 3px 11px 0px #00000014;
-    @include mq(desktop) {
-        max-width: 36.5em;
+    @include mq(tablet) {
+        // max-width: 36.5em;
+        padding: 2.5em;
     }
 }
 
@@ -37,8 +38,8 @@
 }
 
 .c-story__icon {
-    width: 3.14em;
-    height: 3.14em;
+    width: 2.75em;
+    height: 2.75em;
     display: flex;
     justify-content: center;
     align-items: center;
